tworzy caly raport, da się zapisac, pdf kuleje i brak kolorow na kryteria